--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
   
   /* background: color image repeat position/cover */
   background: var(--bg-url) no-repeat top center/cover;
+  min-height: 100vh;
 }
 
 body * {
@@ -42,7 +43,8 @@ body * {
 }
 
 #container {
-  width: 360px;  
+  max-width: 460px;
+  width: 100%;
   margin: 3.5rem auto 0px;
   padding: 0 1.5rem;
 }
@@ -174,4 +176,14 @@ footer {
   padding: 1.5rem 0;
   text-align: center;
   font-size: 0.875rem;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg)
+  }
 }
